# Pluto-Obfuscator

./: CMakeLists.txt  README.md
include/Obfuscation/: BogusControlFlow.h  CryptoUtils.h  Flattening.h  FlatteningEnhanced.h  GlobalsEncryption.h  HelloWorld.h  MBAObfuscation.h  RandomControlFlow.h  SplitBasicBlock.h  Substitution.h  TrapAngr.h  Utils.h  VariableSubstitution.h
src/: BogusControlFlow.cpp  CryptoUtils.cpp  Flattening.cpp  FlatteningEnhanced.cpp  GlobalsEncryption.cpp  HelloWorld.cpp  MBAObfuscation.cpp  MBAUtils.cpp  NewPassRegistry.cpp  PassRegistry.cpp  RandomControlFlow.cpp  SplitBasicBlock.cpp  Substitution.cpp  TrapAngr.cpp  Utils.cpp  VariableSubstitution.cpp
